Operators lesson added

--- a/Lesson_3/operators/Makefile
+++ b/Lesson_3/operators/Makefile
@@ -4,5 +4,7 @@ for file in *.cpp; do
   base=$(basename "$file")
   binary="${base%.*}"
   g++ -std=c++11 -I../include $file -o $binary
+  ./$binary
+  rm ./$binary
 done
 
