--- a/Lesson_3/operators/solutions/Makefile
+++ b/Lesson_3/operators/solutions/Makefile
@@ -1,10 +1,14 @@
 #!/bin/bash
 
-for file in *.cpp; do
-  base=$(basename "$file")
-  binary="${base%.*}"
-  g++ -std=c++11 -I../include $file -o $binary
-  ./$binary
-  rm ./$binary
-done
+g++ -std=c++11 operators_solutions_1.cpp -o operators_solutions_1
+g++ -std=c++11 operators_solutions_2.cpp -o operators_solutions_2
+g++ -std=c++11 square_matrix.cpp operators_solutions_3.cpp -o operators_solutions_3
+
+# ./operators_solutions_1
+# ./operators_solutions_2
+./operators_solutions_3
+
+rm ./operators_solutions_1
+rm ./operators_solutions_2
+rm ./operators_solutions_3
 
