--- a/Lesson_3/operators/solutions/Makefile
+++ b/Lesson_3/operators/solutions/Makefile
@@ -2,7 +2,7 @@
 
 g++ -std=c++11 operators_solutions_1.cpp -o operators_solutions_1
 g++ -std=c++11 operators_solutions_2.cpp -o operators_solutions_2
-g++ -std=c++11 square_matrix.cpp operators_solutions_3.cpp -o operators_solutions_3
+g++ -std=c++11 -DSIZE=5 square_matrix.cpp utility.cpp operators_solutions_3.cpp -o operators_solutions_3
 
 # ./operators_solutions_1
 # ./operators_solutions_2
