--- a/Lesson_4/templates/Makefile
+++ b/Lesson_4/templates/Makefile
@@ -1,6 +1,8 @@
 # http://habrahabr.ru/post/155201/
 
 SHELL=/bin/bash
+SUBDIRS=advanced
+CLEANDIRS=$(SUBDIRS:%=clean-%)
 CC=g++
 CFLAGS=-std=c++11 -I../include
 
@@ -14,8 +16,10 @@ all:
 	$(CC) $(CFLAGS) templates_4.cpp -o templates_4
 	$(CC) $(CFLAGS) class_templates_0.cpp -o class_templates_0
 	$(CC) $(CFLAGS) class_templates_1.cpp -o class_templates_1
-	$(CC) $(CFLAGS) class_templates_2.cpp -o class_templates_2
+	$(MAKE) -C advanced
 
-clean:
-	rm templates_0 templates_0_1 templates_0_2 templates_1 templates_2 templates_3 templates_4 class_templates_0 class_templates_1 class_templates_2
+clean: $(CLEANDIRS)
+$(CLEANDIRS): 
+	$(MAKE) -C $(@:clean-%=%) clean
+	rm templates_0 templates_0_1 templates_0_2 templates_1 templates_2 templates_3 templates_4 class_templates_0 class_templates_1
 
