Array class template with operator new

--- a/Lesson_4/containers/Makefile
+++ b/Lesson_4/containers/Makefile
@@ -14,12 +14,10 @@ all:
 	$(CC) $(CFLAGS) containers_5.cpp -o containers_5
 	$(CC) $(CFLAGS) containers_6.cpp -o containers_6
 	$(CC) $(CFLAGS) containers_7.cpp -o containers_7
-	$(CC) $(CFLAGS) containers_8.cpp -o containers_8
-	$(CC) $(CFLAGS) containers_9.cpp -o containers_9
 	$(MAKE) -C advanced
 
 clean: $(CLEANDIRS)
 $(CLEANDIRS): 
 	$(MAKE) -C $(@:clean-%=%) clean
-	rm containers_1 containers_2 containers_3 containers_4 containers_5 containers_6 containers_7 containers_8 containers_9
+	rm containers_1 containers_2 containers_3 containers_4 containers_5 containers_6 containers_7
 
