--- a/Lesson_4/templates/Makefile
+++ b/Lesson_4/templates/Makefile
@@ -16,10 +16,11 @@ all:
 	$(CC) $(CFLAGS) templates_4.cpp -o templates_4
 	$(CC) $(CFLAGS) class_templates_0.cpp -o class_templates_0
 	$(CC) $(CFLAGS) class_templates_1.cpp -o class_templates_1
+	$(CC) $(CFLAGS) class_templates_2.cpp -o class_templates_2
 	$(MAKE) -C advanced
 
 clean: $(CLEANDIRS)
 $(CLEANDIRS): 
 	$(MAKE) -C $(@:clean-%=%) clean
-	rm templates_0 templates_0_1 templates_0_2 templates_1 templates_2 templates_3 templates_4 class_templates_0 class_templates_1
+	rm templates_0 templates_0_1 templates_0_2 templates_1 templates_2 templates_3 templates_4 class_templates_0 class_templates_1 class_templates_2
 
