--- a/Lesson_4/algorithms/Makefile
+++ b/Lesson_4/algorithms/Makefile
@@ -8,7 +8,12 @@ all:
 	$(CC) $(CFLAGS) algorithms_1.cpp -o algorithms_1
 	$(CC) $(CFLAGS) algorithms_2.cpp -o algorithms_2
 	$(CC) $(CFLAGS) algorithms_3.cpp -o algorithms_3
+	$(CC) $(CFLAGS) algorithms_4.cpp -o algorithms_4
+	$(CC) $(CFLAGS) algorithms_5.cpp -o algorithms_5
+	$(CC) $(CFLAGS) algorithms_6.cpp -o algorithms_6
+	$(CC) $(CFLAGS) algorithms_7.cpp -o algorithms_7
+	$(CC) $(CFLAGS) algorithms_8.cpp -o algorithms_8
 
 clean:
-	rm algorithms_1 algorithms_2 algorithms_3
+	rm algorithms_1 algorithms_2 algorithms_3 algorithms_4 algorithms_5 algorithms_6 algorithms_7 algorithms_8
 
