--- a/Lesson_4/hashing/Makefile
+++ b/Lesson_4/hashing/Makefile
@@ -7,8 +7,7 @@ CFLAGS=-std=c++11 -I../include
 all:
 	$(CC) $(CFLAGS) hashing_1.cpp -o hashing_1
 	$(CC) $(CFLAGS) hashing_2.cpp -o hashing_2
-	$(CC) $(CFLAGS) hashing_3.cpp -o hashing_3
 
 clean:
-	rm hashing_1 hashing_2 hashing_3
+	rm hashing_1 hashing_2
 
