More lesson 5 inheritance

--- a/Lesson_5/inheritance/CMakeLists.txt
+++ b/Lesson_5/inheritance/CMakeLists.txt
@@ -4,9 +4,26 @@ SET( SOURCES_1 ${SOURCE_DIR}/inheritance_1.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/inheritance_2.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/inheritance_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/inheritance_4.cpp )
+SET( SOURCES_5 ${SOURCE_DIR}/inheritance_5.cpp )
+SET( SOURCES_6 ${SOURCE_DIR}/inheritance_6.cpp )
+SET( SOURCES_7 ${SOURCE_DIR}/inheritance_7.cpp )
+SET( SOURCES_8 ${SOURCE_DIR}/inheritance_8.cpp )
+SET( SOURCES_9 ${SOURCE_DIR}/inheritance_9.cpp )
+SET( SOURCES_10 ${SOURCE_DIR}/inheritance_10.cpp )
+#SET( SOURCES_11 ${SOURCE_DIR}/inheritance_11.cpp )
+SET( SOURCES_12 ${SOURCE_DIR}/inheritance_12.cpp )
+SET( SOURCES_13 ${SOURCE_DIR}/inheritance_13.cpp )
 ADD_EXECUTABLE( inheritance_0 ${SOURCES_0} )
 ADD_EXECUTABLE( inheritance_1 ${SOURCES_1} )
 ADD_EXECUTABLE( inheritance_2 ${SOURCES_2} )
 ADD_EXECUTABLE( inheritance_3 ${SOURCES_3} )
 ADD_EXECUTABLE( inheritance_4 ${SOURCES_4} )
-
+ADD_EXECUTABLE( inheritance_5 ${SOURCES_5} )
+ADD_EXECUTABLE( inheritance_6 ${SOURCES_6} )
+ADD_EXECUTABLE( inheritance_7 ${SOURCES_7} )
+ADD_EXECUTABLE( inheritance_8 ${SOURCES_8} )
+ADD_EXECUTABLE( inheritance_9 ${SOURCES_9} )
+ADD_EXECUTABLE( inheritance_10 ${SOURCES_10} )
+#ADD_EXECUTABLE( inheritance_11 ${SOURCES_11} )
+ADD_EXECUTABLE( inheritance_12 ${SOURCES_12} )
+ADD_EXECUTABLE( inheritance_13 ${SOURCES_13} )
