--- a/Lesson_5/polymorphism/CMakeLists.txt
+++ b/Lesson_5/polymorphism/CMakeLists.txt
@@ -1,4 +1,18 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 SET( SOURCES_0 ${SOURCE_DIR}/polymorphism_0.cpp )
+SET( SOURCES_1 ${SOURCE_DIR}/polymorphism_1.cpp )
+SET( SOURCES_2 ${SOURCE_DIR}/polymorphism_2.cpp )
+SET( SOURCES_3 ${SOURCE_DIR}/polymorphism_3.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/polymorphism_4.cpp )
+SET( SOURCES_5 ${SOURCE_DIR}/polymorphism_5.cpp )
+SET( SOURCES_6 ${SOURCE_DIR}/polymorphism_6.cpp )
+SET( SOURCES_7 ${SOURCE_DIR}/polymorphism_7.cpp )
 ADD_EXECUTABLE( polymorphism_0 ${SOURCES_0} )
+ADD_EXECUTABLE( polymorphism_1 ${SOURCES_1} )
+ADD_EXECUTABLE( polymorphism_2 ${SOURCES_2} )
+ADD_EXECUTABLE( polymorphism_3 ${SOURCES_3} )
+ADD_EXECUTABLE( polymorphism_4 ${SOURCES_4} )
+ADD_EXECUTABLE( polymorphism_5 ${SOURCES_5} )
+ADD_EXECUTABLE( polymorphism_6 ${SOURCES_6} )
+ADD_EXECUTABLE( polymorphism_7 ${SOURCES_7} )
 
