Lesson 5: c style inheritance

--- a/Lesson_5/c_style/CMakeLists.txt
+++ b/Lesson_5/c_style/CMakeLists.txt
@@ -1,4 +1,19 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 SET( SOURCES_0 ${SOURCE_DIR}/cstyle_0.cpp )
+SET( SOURCES_1 ${SOURCE_DIR}/cstyle_1.cpp )
+SET( SOURCES_2 ${SOURCE_DIR}/cstyle_2.cpp )
+SET( SOURCES_3 ${SOURCE_DIR}/cstyle_3.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/cstyle_4.cpp )
+SET( SOURCES_5 ${SOURCE_DIR}/cstyle_5.cpp )
+SET( SOURCES_6 ${SOURCE_DIR}/cstyle_6.cpp )
+SET( SOURCES_7 ${SOURCE_DIR}/cstyle_7.cpp )
+SET( SOURCES_8 ${SOURCE_DIR}/cstyle_8.cpp )
 ADD_EXECUTABLE( cstyle_0 ${SOURCES_0} )
-
+ADD_EXECUTABLE( cstyle_1 ${SOURCES_1} )
+ADD_EXECUTABLE( cstyle_2 ${SOURCES_2} )
+ADD_EXECUTABLE( cstyle_3 ${SOURCES_3} )
+ADD_EXECUTABLE( cstyle_4 ${SOURCES_4} )
+ADD_EXECUTABLE( cstyle_5 ${SOURCES_5} )
+ADD_EXECUTABLE( cstyle_6 ${SOURCES_6} )
+ADD_EXECUTABLE( cstyle_7 ${SOURCES_7} )
+ADD_EXECUTABLE( cstyle_8 ${SOURCES_8} )
