--- a/Lesson_6/iterators/CMakeLists.txt
+++ b/Lesson_6/iterators/CMakeLists.txt
@@ -1,4 +1,20 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
-SET( SOURCES_0 ${SOURCE_DIR}/iterators_0.cpp )
-ADD_EXECUTABLE( iterators_0 ${SOURCES_0} )
+#SET( SOURCES_0 ${SOURCE_DIR}/iterators_0.cpp )
+SET( SOURCES_1 ${SOURCE_DIR}/iterators_1.cpp )
+SET( SOURCES_2 ${SOURCE_DIR}/iterators_2.cpp )
+SET( SOURCES_3 ${SOURCE_DIR}/iterators_3.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/iterators_4.cpp )
+SET( SOURCES_5 ${SOURCE_DIR}/iterators_5.cpp )
+SET( SOURCES_6 ${SOURCE_DIR}/iterators_6.cpp )
+#SET( SOURCES_7 ${SOURCE_DIR}/iterators_7.cpp )
+SET( SOURCES_8 ${SOURCE_DIR}/iterators_8.cpp )
+#ADD_EXECUTABLE( iterators_0 ${SOURCES_0} )
+ADD_EXECUTABLE( iterators_1 ${SOURCES_1} )
+ADD_EXECUTABLE( iterators_2 ${SOURCES_2} )
+ADD_EXECUTABLE( iterators_3 ${SOURCES_3} )
+ADD_EXECUTABLE( iterators_4 ${SOURCES_4} )
+ADD_EXECUTABLE( iterators_5 ${SOURCES_5} )
+ADD_EXECUTABLE( iterators_6 ${SOURCES_6} )
+#ADD_EXECUTABLE( iterators_7 ${SOURCES_7} )
+ADD_EXECUTABLE( iterators_8 ${SOURCES_8} )
 
