--- a/Lesson_7/autotools/src/Makefile.am
+++ b/Lesson_7/autotools/src/Makefile.am
@@ -1,12 +1,12 @@
 noinst_PROGRAMS = main_4
 
-mw_console_SOURCES = main_4.cpp
+main_4_SOURCES = main_4.cpp
 
-mw_console_LDFLAGS =
+main_4_LDFLAGS =
 
 include_HEADERS =
 
-mw_console_CPPFLAGS = -std=c++11 -fPIC -I$(top_srcdir)/include
+main_4_CPPFLAGS = -std=c++11 -fPIC -I$(top_srcdir)/include
 
-mw_console_LDADD = $(top_builddir)/src/libprint.la
+main_4_LDADD = $(top_builddir)/lib/libprint.la
 
