--- a/Lesson_8/CMakeLists.txt
+++ b/Lesson_8/CMakeLists.txt
@@ -6,5 +6,5 @@ INCLUDE_DIRECTORIES( include )
 ADD_SUBDIRECTORY( sqlite )
 ADD_SUBDIRECTORY( basic )
 #ADD_SUBDIRECTORY( foreign_key )
-#ADD_SUBDIRECTORY( blobs )
+ADD_SUBDIRECTORY( blobs )
 
