More convenient form with TiXmlHandle

--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -5,6 +5,7 @@ SET( SOURCES_0_1 ${SOURCE_DIR}/http_0_1.cpp )
 SET( SOURCES_0_2 ${SOURCE_DIR}/http_0_2.cpp )
 SET( SOURCES_1 ${SOURCE_DIR}/http_1.cpp )
 SET( SOURCES_1_1 ${SOURCE_DIR}/http_1_1.cpp )
+SET( SOURCES_1_2 ${SOURCE_DIR}/http_1_2.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/http_2.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
@@ -25,6 +26,8 @@ ADD_EXECUTABLE( http_1 ${SOURCES_1} )
 TARGET_LINK_LIBRARIES( http_1 curl curlpp )
 ADD_EXECUTABLE( http_1_1 ${SOURCES_1_1} )
 TARGET_LINK_LIBRARIES( http_1_1 tinyxml curl curlpp )
+ADD_EXECUTABLE( http_1_2 ${SOURCES_1_2} )
+TARGET_LINK_LIBRARIES( http_1_2 tinyxml curl curlpp )
 
 ADD_EXECUTABLE( http_2 ${SOURCES_2} )
 TARGET_LINK_LIBRARIES( http_2 curl curlpp )
