--- a/Lesson_13/CMakeLists.txt
+++ b/Lesson_13/CMakeLists.txt
@@ -8,7 +8,7 @@ INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )  # for config.h
 INCLUDE_DIRECTORIES( include tinyxml )
 
 if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
-    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb3 -O0 -std=c++11 -pthread" )
+    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
 endif()
 
 # -----------------------------------------------------------------------------
