Added Json samples with RapidJson

--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -6,7 +6,9 @@ SET( SOURCES_0_2 ${SOURCE_DIR}/http_0_2.cpp )
 SET( SOURCES_1 ${SOURCE_DIR}/http_1.cpp )
 SET( SOURCES_1_1 ${SOURCE_DIR}/http_1_1.cpp )
 SET( SOURCES_1_2 ${SOURCE_DIR}/http_1_2.cpp )
+SET( SOURCES_1_3 ${SOURCE_DIR}/http_1_3.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/http_2.cpp )
+SET( SOURCES_2_1 ${SOURCE_DIR}/http_2_1.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
@@ -15,6 +17,7 @@ SET( SOURCES_7 ${SOURCE_DIR}/http_7.cpp )
 SET( SOURCES_8 ${SOURCE_DIR}/http_8.cpp )
 SET( SOURCES_9 ${SOURCE_DIR}/http_9.cpp )
 
+# Http request
 ADD_EXECUTABLE( http_0 ${SOURCES_0} )
 TARGET_LINK_LIBRARIES( http_0 curl curlpp )
 ADD_EXECUTABLE( http_0_1 ${SOURCES_0_1} )
@@ -22,15 +25,21 @@ TARGET_LINK_LIBRARIES( http_0_1 curl curlpp )
 ADD_EXECUTABLE( http_0_2 ${SOURCES_0_2} )
 TARGET_LINK_LIBRARIES( http_0_2 curl curlpp )
 
+# XML response
 ADD_EXECUTABLE( http_1 ${SOURCES_1} )
 TARGET_LINK_LIBRARIES( http_1 curl curlpp )
 ADD_EXECUTABLE( http_1_1 ${SOURCES_1_1} )
 TARGET_LINK_LIBRARIES( http_1_1 tinyxml curl curlpp )
 ADD_EXECUTABLE( http_1_2 ${SOURCES_1_2} )
 TARGET_LINK_LIBRARIES( http_1_2 tinyxml curl curlpp )
+ADD_EXECUTABLE( http_1_3 ${SOURCES_1_3} )
+TARGET_LINK_LIBRARIES( http_1_3 tinyxml curl curlpp )
 
+# Json response
 ADD_EXECUTABLE( http_2 ${SOURCES_2} )
 TARGET_LINK_LIBRARIES( http_2 curl curlpp )
+ADD_EXECUTABLE( http_2_1 ${SOURCES_2_1} )
+TARGET_LINK_LIBRARIES( http_2_1 curl curlpp )
 
 ADD_EXECUTABLE( http_3 ${SOURCES_3} )
 TARGET_LINK_LIBRARIES( http_3 curl curlpp )
