--- a/Lesson_13/CMakeLists.txt
+++ b/Lesson_13/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT( Lesson_13_Network )
 # --------------------------- Common header -----------------------------------
 # -----------------------------------------------------------------------------
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )  # for config.h
-INCLUDE_DIRECTORIES( include tinyxml )
+INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} include tinyxml )
 
 if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
     SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
