Additional Json samples

--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -9,6 +9,8 @@ SET( SOURCES_1_2 ${SOURCE_DIR}/http_1_2.cpp )
 SET( SOURCES_1_3 ${SOURCE_DIR}/http_1_3.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/http_2.cpp )
 SET( SOURCES_2_1 ${SOURCE_DIR}/http_2_1.cpp )
+SET( SOURCES_2_2 ${SOURCE_DIR}/http_2_2.cpp )
+SET( SOURCES_2_3 ${SOURCE_DIR}/http_2_3.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
@@ -40,6 +42,10 @@ ADD_EXECUTABLE( http_2 ${SOURCES_2} )
 TARGET_LINK_LIBRARIES( http_2 curl curlpp )
 ADD_EXECUTABLE( http_2_1 ${SOURCES_2_1} )
 TARGET_LINK_LIBRARIES( http_2_1 curl curlpp )
+ADD_EXECUTABLE( http_2_2 ${SOURCES_2_2} )
+TARGET_LINK_LIBRARIES( http_2_2 curl curlpp )
+ADD_EXECUTABLE( http_2_3 ${SOURCES_2_3} )
+TARGET_LINK_LIBRARIES( http_2_3 curl curlpp )
 
 ADD_EXECUTABLE( http_3 ${SOURCES_3} )
 TARGET_LINK_LIBRARIES( http_3 curl curlpp )
