--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -14,6 +14,7 @@ SET( SOURCES_2_3 ${SOURCE_DIR}/http_2_3.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
 SET( SOURCES_4_1 ${SOURCE_DIR}/http_4_1.cpp )
+SET( SOURCES_4_2 ${SOURCE_DIR}/http_4_2.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/http_6.cpp )
 SET( SOURCES_7 ${SOURCE_DIR}/http_7.cpp )
@@ -57,6 +58,8 @@ ADD_EXECUTABLE( http_4 ${SOURCES_4} )
 TARGET_LINK_LIBRARIES( http_4 curl curlpp )
 ADD_EXECUTABLE( http_4_1 ${SOURCES_4_1} )
 TARGET_LINK_LIBRARIES( http_4_1 curl curlpp )
+ADD_EXECUTABLE( http_4_2 ${SOURCES_4_2} )
+TARGET_LINK_LIBRARIES( http_4_2 curl curlpp )
 
 ADD_EXECUTABLE( http_5 ${SOURCES_5} )
 TARGET_LINK_LIBRARIES( http_5 curl curlpp )
