Unique lock, lock guard, try_lock

--- a/Lesson_12/mutex/CMakeLists.txt
+++ b/Lesson_12/mutex/CMakeLists.txt
@@ -6,7 +6,12 @@ SET( SOURCES_1_2 ${SOURCE_DIR}/mutex_1_2.cpp )
 SET( SOURCES_1_3 ${SOURCE_DIR}/mutex_1_3.cpp )
 SET( SOURCES_1_4 ${SOURCE_DIR}/mutex_1_4.cpp )
 SET( SOURCES_1_5 ${SOURCE_DIR}/mutex_1_5.cpp )
+SET( SOURCES_1_5_1 ${SOURCE_DIR}/mutex_1_5_1.cpp )
 SET( SOURCES_1_6 ${SOURCE_DIR}/mutex_1_6.cpp )
+SET( SOURCES_1_7 ${SOURCE_DIR}/mutex_1_7.cpp )
+SET( SOURCES_1_8 ${SOURCE_DIR}/mutex_1_8.cpp )
+SET( SOURCES_1_9 ${SOURCE_DIR}/mutex_1_9.cpp )
+SET( SOURCES_1_10 ${SOURCE_DIR}/mutex_1_10.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/mutex_2.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/mutex_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/mutex_4.cpp )
@@ -18,8 +23,15 @@ ADD_EXECUTABLE( mutex_1_1 ${SOURCES_1_1} )
 ADD_EXECUTABLE( mutex_1_2 ${SOURCES_1_2} )
 ADD_EXECUTABLE( mutex_1_3 ${SOURCES_1_3} )
 ADD_EXECUTABLE( mutex_1_4 ${SOURCES_1_4} )
+# Exception safety
 ADD_EXECUTABLE( mutex_1_5 ${SOURCES_1_5} )
+ADD_EXECUTABLE( mutex_1_5_1 ${SOURCES_1_5_1} )
 ADD_EXECUTABLE( mutex_1_6 ${SOURCES_1_6} )
+ADD_EXECUTABLE( mutex_1_7 ${SOURCES_1_7} )
+ADD_EXECUTABLE( mutex_1_8 ${SOURCES_1_8} )
+ADD_EXECUTABLE( mutex_1_9 ${SOURCES_1_9} )
+# Try lock
+ADD_EXECUTABLE( mutex_1_10 ${SOURCES_1_10} )
 
 ADD_EXECUTABLE( mutex_2 ${SOURCES_2} )
 ADD_EXECUTABLE( mutex_3 ${SOURCES_3} )
