Added thread safe storage sample

--- a/Lesson_12/mutex/CMakeLists.txt
+++ b/Lesson_12/mutex/CMakeLists.txt
@@ -14,6 +14,7 @@ SET( SOURCES_1_9 ${SOURCE_DIR}/mutex_1_9.cpp )
 SET( SOURCES_1_10 ${SOURCE_DIR}/mutex_1_10.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/mutex_2.cpp )
 SET( SOURCES_2_1 ${SOURCE_DIR}/mutex_2_1.cpp )
+SET( SOURCES_2_2 ${SOURCE_DIR}/mutex_2_2.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/mutex_3.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/mutex_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/mutex_5.cpp )
@@ -37,6 +38,7 @@ ADD_EXECUTABLE( mutex_1_10 ${SOURCES_1_10} )
 # Fix concurrency samples
 ADD_EXECUTABLE( mutex_2 ${SOURCES_2} )
 ADD_EXECUTABLE( mutex_2_1 ${SOURCES_2_1} )
+ADD_EXECUTABLE( mutex_2_2 ${SOURCES_2_2} )
 
 # Try lock by time or condition, re-lock mutex
 ADD_EXECUTABLE( mutex_3 ${SOURCES_3} )
