--- a/Lesson_12/condition_variable/CMakeLists.txt
+++ b/Lesson_12/condition_variable/CMakeLists.txt
@@ -4,6 +4,7 @@ SET( SOURCES_1_1 ${SOURCE_DIR}/condition_variable_1_1.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/condition_variable_2.cpp )
 SET( SOURCES_2_1 ${SOURCE_DIR}/condition_variable_2_1.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/condition_variable_3.cpp )
+SET( SOURCES_3_0 ${SOURCE_DIR}/condition_variable_3_0.cpp )
 SET( SOURCES_3_1 ${SOURCE_DIR}/condition_variable_3_1.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/condition_variable_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/condition_variable_5.cpp )
@@ -18,6 +19,7 @@ ADD_EXECUTABLE( condition_variable_2_1 ${SOURCES_2_1} )
 
 # dinning philosophers
 ADD_EXECUTABLE( condition_variable_3 ${SOURCES_3} )  # deadlock
+ADD_EXECUTABLE( condition_variable_3_0 ${SOURCES_3_0} )
 ADD_EXECUTABLE( condition_variable_3_1 ${SOURCES_3_1} )
 
 ADD_EXECUTABLE( condition_variable_4 ${SOURCES_4} )
