--- a/Lesson_12/mutex/CMakeLists.txt
+++ b/Lesson_12/mutex/CMakeLists.txt
@@ -7,6 +7,7 @@ SET( SOURCES_1_3 ${SOURCE_DIR}/mutex_1_3.cpp )
 SET( SOURCES_1_4 ${SOURCE_DIR}/mutex_1_4.cpp )
 SET( SOURCES_1_5 ${SOURCE_DIR}/mutex_1_5.cpp )
 SET( SOURCES_1_5_1 ${SOURCE_DIR}/mutex_1_5_1.cpp )
+SET( SOURCES_1_5_2 ${SOURCE_DIR}/mutex_1_5_2.cpp )
 SET( SOURCES_1_6 ${SOURCE_DIR}/mutex_1_6.cpp )
 SET( SOURCES_1_7 ${SOURCE_DIR}/mutex_1_7.cpp )
 SET( SOURCES_1_8 ${SOURCE_DIR}/mutex_1_8.cpp )
@@ -28,6 +29,7 @@ ADD_EXECUTABLE( mutex_1_4 ${SOURCES_1_4} )
 # Exception safety
 ADD_EXECUTABLE( mutex_1_5 ${SOURCES_1_5} )
 ADD_EXECUTABLE( mutex_1_5_1 ${SOURCES_1_5_1} )
+ADD_EXECUTABLE( mutex_1_5_2 ${SOURCES_1_5_2} )
 ADD_EXECUTABLE( mutex_1_6 ${SOURCES_1_6} )
 ADD_EXECUTABLE( mutex_1_7 ${SOURCES_1_7} )
 ADD_EXECUTABLE( mutex_1_8 ${SOURCES_1_8} )
