--- a/Lesson_13/server/CMakeLists.txt
+++ b/Lesson_13/server/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
-
 SET( SOURCES_0 ${SOURCE_DIR}/server_0.cpp )
-
+SET( SOURCES_1 ${SOURCE_DIR}/server_1.cpp )
 ADD_EXECUTABLE( server_0 ${SOURCES_0} )
+ADD_EXECUTABLE( server_1 ${SOURCES_1} )
 
