--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -10,6 +10,7 @@ SET( SOURCES_2 ${SOURCE_DIR}/http_2.cpp )
 SET( SOURCES_2_1 ${SOURCE_DIR}/http_2_1.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_3_1 ${SOURCE_DIR}/http_3_1.cpp )
+SET( SOURCES_3_2 ${SOURCE_DIR}/http_3_2.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/http_6.cpp )
@@ -44,6 +45,8 @@ ADD_EXECUTABLE( http_3 ${SOURCES_3} )
 TARGET_LINK_LIBRARIES( http_3 )
 ADD_EXECUTABLE( http_3_1 ${SOURCES_3_1} )
 TARGET_LINK_LIBRARIES( http_3_1 http_parser )
+ADD_EXECUTABLE( http_3_2 ${SOURCES_3_2} )
+TARGET_LINK_LIBRARIES( http_3_2 http_parser )
 
 # POST, PUT, DELETE Json response
 ADD_EXECUTABLE( http_4 ${SOURCES_4} )
