Pico parser seem to be more robust

--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -10,7 +10,9 @@ SET( SOURCES_2 ${SOURCE_DIR}/http_2.cpp )
 SET( SOURCES_2_1 ${SOURCE_DIR}/http_2_1.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/http_3.cpp )
 SET( SOURCES_3_1 ${SOURCE_DIR}/http_3_1.cpp )
+SET( SOURCES_3_1_pico ${SOURCE_DIR}/http_3_1_pico.cpp )
 SET( SOURCES_3_2 ${SOURCE_DIR}/http_3_2.cpp )
+SET( SOURCES_3_2_pico ${SOURCE_DIR}/http_3_2_pico.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/http_6.cpp )
@@ -45,8 +47,12 @@ ADD_EXECUTABLE( http_3 ${SOURCES_3} )
 TARGET_LINK_LIBRARIES( http_3 )
 ADD_EXECUTABLE( http_3_1 ${SOURCES_3_1} )
 TARGET_LINK_LIBRARIES( http_3_1 http_parser )
+ADD_EXECUTABLE( http_3_1_pico ${SOURCES_3_1_pico} )
+TARGET_LINK_LIBRARIES( http_3_1_pico pico_parser )
 ADD_EXECUTABLE( http_3_2 ${SOURCES_3_2} )
 TARGET_LINK_LIBRARIES( http_3_2 http_parser )
+ADD_EXECUTABLE( http_3_2_pico ${SOURCES_3_2_pico} )
+TARGET_LINK_LIBRARIES( http_3_2_pico pico_parser )
 
 # POST, PUT, DELETE Json response
 ADD_EXECUTABLE( http_4 ${SOURCES_4} )
