--- a/Lesson_13/http_parser/CMakeLists.txt
+++ b/Lesson_13/http_parser/CMakeLists.txt
@@ -1,5 +1,10 @@
-SET( TARGET http_parser )
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
-SET( SOURCES ${SOURCE_DIR}/http_parser.c )
-ADD_LIBRARY( ${TARGET} SHARED ${SOURCES} )
+
+SET( TARGET_HTTP http_parser )
+SET( SOURCES_HTTP ${SOURCE_DIR}/http_parser.c )
+ADD_LIBRARY( ${TARGET_HTTP} SHARED ${SOURCES_HTTP} )
+
+SET( TARGET_PICO pico_parser )
+SET( SOURCES_PICO ${SOURCE_DIR}/picohttpparser.c )
+ADD_LIBRARY( ${TARGET_PICO} SHARED ${SOURCES_PICO} )
 
