Multi-channel chat client-server

--- a/Lesson_13/client/solutions/CMakeLists.txt
+++ b/Lesson_13/client/solutions/CMakeLists.txt
@@ -8,8 +8,8 @@ ADD_EXECUTABLE( client_2_1 ${SOURCES_2_1} )
 TARGET_LINK_LIBRARIES( client_2_1 protocol )
 ADD_EXECUTABLE( client_2_2 ${SOURCES_2_2} )
 TARGET_LINK_LIBRARIES( client_2_2 protocol )
-#ADD_EXECUTABLE( client_2_3 ${SOURCES_2_3} )
-#TARGET_LINK_LIBRARIES( client_2_3 protocol_mc )
+ADD_EXECUTABLE( client_2_3 ${SOURCES_2_3} )
+TARGET_LINK_LIBRARIES( client_2_3 protocol_mc )
 
 ADD_EXECUTABLE( client_3_1 ${SOURCES_3_1} )
 TARGET_LINK_LIBRARIES( client_3_1 )
