Server 3.1 with pico parser sample to parse request

--- a/Lesson_13/server/CMakeLists.txt
+++ b/Lesson_13/server/CMakeLists.txt
@@ -4,6 +4,7 @@ SET( SOURCES_1 ${SOURCE_DIR}/server_1.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/server_2.cpp )
 SET( SOURCES_3 ${SOURCE_DIR}/server_3.cpp )
 SET( SOURCES_3_1 ${SOURCE_DIR}/server_3_1.cpp )
+SET( SOURCES_3_1_pico ${SOURCE_DIR}/server_3_1_pico.cpp )
 ADD_EXECUTABLE( server_0 ${SOURCES_0} )
 ADD_EXECUTABLE( server_1 ${SOURCES_1} )
 
@@ -15,6 +16,8 @@ ADD_EXECUTABLE( server_3 ${SOURCES_3} )
 TARGET_LINK_LIBRARIES( server_3 )
 ADD_EXECUTABLE( server_3_1 ${SOURCES_3_1} )
 TARGET_LINK_LIBRARIES( server_3_1 http_parser )
+ADD_EXECUTABLE( server_3_1_pico ${SOURCES_3_1_pico} )
+TARGET_LINK_LIBRARIES( server_3_1_pico pico_parser )
 
 ADD_SUBDIRECTORY( solutions )
 
