--- a/Lesson_13/http/solutions/CMakeLists.txt
+++ b/Lesson_13/http/solutions/CMakeLists.txt
@@ -3,6 +3,7 @@ SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 SET( SOURCES_1_3 ${SOURCE_DIR}/http_1_3.cpp )
 SET( SOURCES_2_2 ${SOURCE_DIR}/http_2_2.cpp )
 SET( SOURCES_2_3 ${SOURCE_DIR}/http_2_3.cpp )
+SET( SOURCES_3_2_my ${SOURCE_DIR}/http_3_2_my.cpp )
 SET( SOURCES_4_1 ${SOURCE_DIR}/http_4_1.cpp )
 SET( SOURCES_4_2 ${SOURCE_DIR}/http_4_2.cpp )
 
@@ -15,6 +16,10 @@ ADD_EXECUTABLE( http_2_2 ${SOURCES_2_2} )
 TARGET_LINK_LIBRARIES( http_2_2 curl curlpp )
 ADD_EXECUTABLE( http_2_3 ${SOURCES_2_3} )
 TARGET_LINK_LIBRARIES( http_2_3 curl curlpp )
+
+# Parse Http response
+ADD_EXECUTABLE( http_3_2_my ${SOURCES_3_2_my} )
+TARGET_LINK_LIBRARIES( http_3_2_my x_my_parser my_parser )
 
 # POST, PUT, DELETE Json response
 ADD_EXECUTABLE( http_4_1 ${SOURCES_4_1} )
