Added stub sample for Http server

--- a/Lesson_13/server/solutions/CMakeLists.txt
+++ b/Lesson_13/server/solutions/CMakeLists.txt
@@ -3,6 +3,7 @@ SET( SOURCES_2_1 ${SOURCE_DIR}/server_2_1.cpp )
 SET( SOURCES_2_2 ${SOURCE_DIR}/server_2_2.cpp )
 SET( SOURCES_2_3 ${SOURCE_DIR}/server_2_3.cpp )
 SET( SOURCES_3_1 ${SOURCE_DIR}/server_3_1.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/server_4.cpp )
 
 ADD_EXECUTABLE( server_2_1 ${SOURCES_2_1} )
 TARGET_LINK_LIBRARIES( server_2_1 protocol )
@@ -10,4 +11,6 @@ ADD_EXECUTABLE( server_2_2 ${SOURCES_2_2} )
 TARGET_LINK_LIBRARIES( server_2_2 protocol )
 ADD_EXECUTABLE( server_2_3 ${SOURCES_2_3} )
 TARGET_LINK_LIBRARIES( server_2_3 protocol_mc )
+ADD_EXECUTABLE( server_4 ${SOURCES_4} )
+TARGET_LINK_LIBRARIES( server_4 x_my_parser my_parser protocol_mc )
 
