--- a/Lesson_13/client/solutions/CMakeLists.txt
+++ b/Lesson_13/client/solutions/CMakeLists.txt
@@ -2,6 +2,7 @@ SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 SET( SOURCES_2_1 ${SOURCE_DIR}/client_2_1.cpp )
 SET( SOURCES_2_2 ${SOURCE_DIR}/client_2_2.cpp )
 SET( SOURCES_2_3 ${SOURCE_DIR}/client_2_3.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/client_4.cpp )
 
 ADD_EXECUTABLE( client_2_1 ${SOURCES_2_1} )
 TARGET_LINK_LIBRARIES( client_2_1 protocol )
@@ -9,4 +10,6 @@ ADD_EXECUTABLE( client_2_2 ${SOURCES_2_2} )
 TARGET_LINK_LIBRARIES( client_2_2 protocol )
 ADD_EXECUTABLE( client_2_3 ${SOURCES_2_3} )
 TARGET_LINK_LIBRARIES( client_2_3 protocol_mc )
+ADD_EXECUTABLE( client_4 ${SOURCES_4} )
+TARGET_LINK_LIBRARIES( client_4 protocol_mc convert_json x_my_parser my_parser )
 
