Stubs for Lesson 14

--- a/Lesson_14_chat/CMakeLists.txt
+++ b/Lesson_14_chat/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT( Lesson_14_Chat )
 # --------------------------- Common header -----------------------------------
 # -----------------------------------------------------------------------------
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )  # for config.h
-INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} include tinyxml )
+INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} include )
 
 if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
     SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
@@ -14,5 +14,4 @@ endif()
 # -----------------------------------------------------------------------------
 ADD_SUBDIRECTORY( client )
 ADD_SUBDIRECTORY( server )
-ADD_SUBDIRECTORY( middleware )
 
