--- a/Lesson_13/http/CMakeLists.txt
+++ b/Lesson_13/http/CMakeLists.txt
@@ -14,6 +14,8 @@ SET( SOURCES_3_1_pico ${SOURCE_DIR}/http_3_1_pico.cpp )
 SET( SOURCES_3_2 ${SOURCE_DIR}/http_3_2.cpp )
 SET( SOURCES_3_2_pico ${SOURCE_DIR}/http_3_2_pico.cpp )
 SET( SOURCES_4 ${SOURCE_DIR}/http_4.cpp )
+SET( SOURCES_4get ${SOURCE_DIR}/http_4get.cpp )
+SET( SOURCES_4x ${SOURCE_DIR}/http_4x.cpp )
 SET( SOURCES_5 ${SOURCE_DIR}/http_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/http_6.cpp )
 SET( SOURCES_7 ${SOURCE_DIR}/http_7.cpp )
@@ -57,6 +59,10 @@ TARGET_LINK_LIBRARIES( http_3_2_pico pico_parser )
 # POST, PUT, DELETE Json response
 ADD_EXECUTABLE( http_4 ${SOURCES_4} )
 TARGET_LINK_LIBRARIES( http_4 curl curlpp )
+ADD_EXECUTABLE( http_4get ${SOURCES_4get} )
+TARGET_LINK_LIBRARIES( http_4get curl curlpp )
+ADD_EXECUTABLE( http_4x ${SOURCES_4x} )
+TARGET_LINK_LIBRARIES( http_4x curl curlpp )
 
 ADD_EXECUTABLE( http_5 ${SOURCES_5} )
 TARGET_LINK_LIBRARIES( http_5 curl curlpp )
