--- a/Lesson_0/statements/CMakeLists.txt
+++ b/Lesson_0/statements/CMakeLists.txt
@@ -1,6 +1,18 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 
 SET( SOURCES_0 ${SOURCE_DIR}/statements_0.cpp )
+SET( SOURCES_1 ${SOURCE_DIR}/statements_1.cpp )
+SET( SOURCES_2 ${SOURCE_DIR}/statements_2.cpp )
+SET( SOURCES_3 ${SOURCE_DIR}/statements_3.cpp )
+SET( SOURCES_4 ${SOURCE_DIR}/statements_4.cpp )
+SET( SOURCES_5 ${SOURCE_DIR}/statements_5.cpp )
+SET( SOURCES_6 ${SOURCE_DIR}/statements_6.cpp )
 
 ADD_EXECUTABLE( statements_0 ${SOURCES_0} )
+ADD_EXECUTABLE( statements_1 ${SOURCES_1} )
+ADD_EXECUTABLE( statements_2 ${SOURCES_2} )
+ADD_EXECUTABLE( statements_3 ${SOURCES_3} )
+ADD_EXECUTABLE( statements_4 ${SOURCES_4} )
+ADD_EXECUTABLE( statements_5 ${SOURCES_5} )
+ADD_EXECUTABLE( statements_6 ${SOURCES_6} )
 
