Added stub for secure client / server

--- a/Lesson_13/CMakeLists.txt
+++ b/Lesson_13/CMakeLists.txt
@@ -18,4 +18,5 @@ ADD_SUBDIRECTORY( client )
 ADD_SUBDIRECTORY( server )
 ADD_SUBDIRECTORY( protocol )
 ADD_SUBDIRECTORY( tinyxml )
+ADD_SUBDIRECTORY( advanced )
 
