Start to impl secure client-server

--- a/Lesson_13/advanced/CMakeLists.txt
+++ b/Lesson_13/advanced/CMakeLists.txt
@@ -14,3 +14,8 @@ SET( SERVER_SOURCES ${SOURCE_DIR}/secure_server.cpp )
 ADD_EXECUTABLE( ${SERVER_TARGET} ${SERVER_SOURCES} )
 TARGET_LINK_LIBRARIES( ${SERVER_TARGET} ${OPENSSL_LIBS} )
 
+SET( SSLCONNECT_TARGET sslconnect )
+SET( SSLCONNECT_SOURCES ${SOURCE_DIR}/sslconnect.c )
+ADD_EXECUTABLE( ${SSLCONNECT_TARGET} ${SSLCONNECT_SOURCES} )
+TARGET_LINK_LIBRARIES( ${SSLCONNECT_TARGET} ${OPENSSL_LIBS} )
+
