Added more algos and home tasks

--- a/Lesson_4/algorithms/CMakeLists.txt
+++ b/Lesson_4/algorithms/CMakeLists.txt
@@ -7,6 +7,13 @@ SET( SOURCES_5 ${SOURCE_DIR}/algorithms_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/algorithms_6.cpp )
 SET( SOURCES_7 ${SOURCE_DIR}/algorithms_7.cpp )
 SET( SOURCES_8 ${SOURCE_DIR}/algorithms_8.cpp )
+SET( SOURCES_9 ${SOURCE_DIR}/algorithms_9.cpp )
+SET( SOURCES_10 ${SOURCE_DIR}/algorithms_10.cpp )
+SET( SOURCES_11 ${SOURCE_DIR}/algorithms_11.cpp )
+SET( SOURCES_12 ${SOURCE_DIR}/algorithms_12.cpp )
+SET( SOURCES_13 ${SOURCE_DIR}/algorithms_13.cpp )
+SET( SOURCES_14 ${SOURCE_DIR}/algorithms_14.cpp )
+SET( SOURCES_15 ${SOURCE_DIR}/algorithms_15.cpp )
 ADD_EXECUTABLE( algorithms_1 ${SOURCES_1} )
 ADD_EXECUTABLE( algorithms_2 ${SOURCES_2} )
 ADD_EXECUTABLE( algorithms_3 ${SOURCES_3} )
@@ -15,4 +22,11 @@ ADD_EXECUTABLE( algorithms_5 ${SOURCES_5} )
 ADD_EXECUTABLE( algorithms_6 ${SOURCES_6} )
 ADD_EXECUTABLE( algorithms_7 ${SOURCES_7} )
 ADD_EXECUTABLE( algorithms_8 ${SOURCES_8} )
+ADD_EXECUTABLE( algorithms_9 ${SOURCES_9} )
+ADD_EXECUTABLE( algorithms_10 ${SOURCES_10} )
+ADD_EXECUTABLE( algorithms_11 ${SOURCES_11} )
+ADD_EXECUTABLE( algorithms_12 ${SOURCES_12} )
+ADD_EXECUTABLE( algorithms_13 ${SOURCES_13} )
+ADD_EXECUTABLE( algorithms_14 ${SOURCES_14} )
+ADD_EXECUTABLE( algorithms_15 ${SOURCES_15} )
 
