AES and RSA crypting samples added

--- a/Lesson_13/advanced/CMakeLists.txt
+++ b/Lesson_13/advanced/CMakeLists.txt
@@ -19,3 +19,13 @@ SET( SSLCONNECT_SOURCES ${SOURCE_DIR}/sslconnect.c )
 ADD_EXECUTABLE( ${SSLCONNECT_TARGET} ${SSLCONNECT_SOURCES} )
 TARGET_LINK_LIBRARIES( ${SSLCONNECT_TARGET} ${OPENSSL_LIBS} )
 
+SET( AESCRYPTING_TARGET aes_crypting )
+SET( AESCRYPTING_SOURCES ${SOURCE_DIR}/aes_crypting.cpp )
+ADD_EXECUTABLE( ${AESCRYPTING_TARGET} ${AESCRYPTING_SOURCES} )
+TARGET_LINK_LIBRARIES( ${AESCRYPTING_TARGET} ${OPENSSL_LIBS} )
+
+SET( RSAEVPCRYPTING_TARGET rsa_envelope_crypting )
+SET( RSAEVPCRYPTING_SOURCES ${SOURCE_DIR}/rsa_envelope_crypting.cpp )
+ADD_EXECUTABLE( ${RSAEVPCRYPTING_TARGET} ${RSAEVPCRYPTING_SOURCES} )
+TARGET_LINK_LIBRARIES( ${RSAEVPCRYPTING_TARGET} ${OPENSSL_LIBS} )
+
