Template sort testing

--- a/Lesson_11/CMakeLists.txt
+++ b/Lesson_11/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 2.8 )
-PROJECT( Lesson_11_Smart_Pointers )
+PROJECT( Lesson_11_Templates )
 
 # -----------------------------------------------------------------------------
 # --------------------------- Common header -----------------------------------
