--- a/Lesson_11/templates/CMakeLists.txt
+++ b/Lesson_11/templates/CMakeLists.txt
@@ -1,5 +1,12 @@
-SET( TARGET_0 templates_0 )
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
-SET( SOURCES_0 ${SOURCE_DIR}/templates_0.cpp )
-ADD_EXECUTABLE( ${TARGET_0} ${SOURCES_0} )
+
+ADD_EXECUTABLE( templates_0 ${SOURCE_DIR}/templates_0.cpp )
+ADD_EXECUTABLE( templates_1 ${SOURCE_DIR}/templates_1.cpp )
+ADD_EXECUTABLE( templates_2 ${SOURCE_DIR}/templates_2.cpp )
+ADD_EXECUTABLE( templates_3 ${SOURCE_DIR}/templates_3.cpp )
+ADD_EXECUTABLE( templates_3_unit ${SOURCE_DIR}/templates_3_unit.cpp )
+ADD_EXECUTABLE( templates_3_stress ${SOURCE_DIR}/templates_3_stress.cpp )
+ADD_EXECUTABLE( templates_3_1 ${SOURCE_DIR}/templates_3_1.cpp )
+ADD_EXECUTABLE( templates_3_1_unit ${SOURCE_DIR}/templates_3_1_unit.cpp )
+ADD_EXECUTABLE( templates_3_1_stress ${SOURCE_DIR}/templates_3_1_stress.cpp )
 
