--- a/Lesson_5/c_style/CMakeLists.txt
+++ b/Lesson_5/c_style/CMakeLists.txt
@@ -8,6 +8,7 @@ SET( SOURCES_5 ${SOURCE_DIR}/cstyle_5.cpp )
 SET( SOURCES_6 ${SOURCE_DIR}/cstyle_6.cpp )
 SET( SOURCES_7 ${SOURCE_DIR}/cstyle_7.cpp )
 SET( SOURCES_8 ${SOURCE_DIR}/cstyle_8.cpp )
+SET( SOURCES_9 ${SOURCE_DIR}/cstyle_9.cpp )
 ADD_EXECUTABLE( cstyle_0 ${SOURCES_0} )
 ADD_EXECUTABLE( cstyle_1 ${SOURCES_1} )
 ADD_EXECUTABLE( cstyle_2 ${SOURCES_2} )
@@ -17,3 +18,5 @@ ADD_EXECUTABLE( cstyle_5 ${SOURCES_5} )
 ADD_EXECUTABLE( cstyle_6 ${SOURCES_6} )
 ADD_EXECUTABLE( cstyle_7 ${SOURCES_7} )
 ADD_EXECUTABLE( cstyle_8 ${SOURCES_8} )
+ADD_EXECUTABLE( cstyle_9 ${SOURCES_9} )
+
