Added vtable more samples

--- a/Lesson_5/vtable/CMakeLists.txt
+++ b/Lesson_5/vtable/CMakeLists.txt
@@ -1,3 +1,6 @@
+# @see http://www.learncpp.com/cpp-tutorial/125-the-virtual-table/
+# @see http://stackoverflow.com/questions/137282/how-can-i-avoid-the-diamond-of-death-when-using-multiple-inheritance
+
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 SET( SOURCES_0 ${SOURCE_DIR}/vtable_0.cpp )
 SET( SOURCES_1 ${SOURCE_DIR}/vtable_1.cpp )
@@ -11,6 +14,12 @@ SET( SOURCES_8 ${SOURCE_DIR}/vtable_8.cpp )
 SET( SOURCES_9 ${SOURCE_DIR}/vtable_9.cpp )
 SET( SOURCES_10 ${SOURCE_DIR}/vtable_10.cpp )
 SET( SOURCES_11 ${SOURCE_DIR}/vtable_11.cpp )
+SET( SOURCES_12 ${SOURCE_DIR}/vtable_12.cpp )
+SET( SOURCES_13 ${SOURCE_DIR}/vtable_13.cpp )
+SET( SOURCES_14 ${SOURCE_DIR}/vtable_14.cpp )
+SET( SOURCES_15 ${SOURCE_DIR}/vtable_15.cpp )
+SET( SOURCES_16 ${SOURCE_DIR}/vtable_16.cpp )
+SET( SOURCES_17 ${SOURCE_DIR}/vtable_17.cpp )
 ADD_EXECUTABLE( vtable_0 ${SOURCES_0} )
 ADD_EXECUTABLE( vtable_1 ${SOURCES_1} )
 ADD_EXECUTABLE( vtable_2 ${SOURCES_2} )
@@ -23,4 +32,10 @@ ADD_EXECUTABLE( vtable_8 ${SOURCES_8} )
 ADD_EXECUTABLE( vtable_9 ${SOURCES_9} )
 ADD_EXECUTABLE( vtable_10 ${SOURCES_10} )
 ADD_EXECUTABLE( vtable_11 ${SOURCES_11} )
+ADD_EXECUTABLE( vtable_12 ${SOURCES_12} )
+ADD_EXECUTABLE( vtable_13 ${SOURCES_13} )
+ADD_EXECUTABLE( vtable_14 ${SOURCES_14} )
+ADD_EXECUTABLE( vtable_15 ${SOURCES_15} )
+ADD_EXECUTABLE( vtable_16 ${SOURCES_16} )
+ADD_EXECUTABLE( vtable_17 ${SOURCES_17} )
 
