--- a/Lesson_13/server/CMakeLists.txt
+++ b/Lesson_13/server/CMakeLists.txt
@@ -1,6 +1,9 @@
 SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
 
 SET( SOURCES_LINK_0 ${SOURCE_DIR}/link_server_0.cpp )
+SET( SOURCES_LINK_1 ${SOURCE_DIR}/link_server_1.cpp )
+SET( SOURCES_LINK_2 ${SOURCE_DIR}/link_server_2.cpp )
+SET( SOURCES_LINK_3 ${SOURCE_DIR}/link_server_3.cpp )
 SET( SOURCES_0 ${SOURCE_DIR}/server_0.cpp )
 SET( SOURCES_1 ${SOURCE_DIR}/server_1.cpp )
 SET( SOURCES_2 ${SOURCE_DIR}/server_2.cpp )
@@ -9,7 +12,10 @@ SET( SOURCES_3_1 ${SOURCE_DIR}/server_3_1.cpp )
 SET( SOURCES_3_1_pico ${SOURCE_DIR}/server_3_1_pico.cpp )
 SET( SOURCES_3_1_my ${SOURCE_DIR}/server_3_1_my.cpp )
 
-ADD_EXECUTABLE( link_server_0 ${SOURCES_LINK_0} )
+ADD_EXECUTABLE( link_server_real ${SOURCES_LINK_0} )
+ADD_EXECUTABLE( link_server_anketa ${SOURCES_LINK_1} )
+ADD_EXECUTABLE( link_server_branchio ${SOURCES_LINK_2} )
+ADD_EXECUTABLE( link_server_mailstat ${SOURCES_LINK_3} )
 ADD_EXECUTABLE( server_0 ${SOURCES_0} )
 ADD_EXECUTABLE( server_1 ${SOURCES_1} )
 ADD_EXECUTABLE( server_2 ${SOURCES_2} )
