--- a/Lesson_5/c_style/CMakeLists.txt
+++ b/Lesson_5/c_style/CMakeLists.txt
@@ -9,6 +9,7 @@ SET( SOURCES_6 ${SOURCE_DIR}/cstyle_6.cpp )
 SET( SOURCES_7 ${SOURCE_DIR}/cstyle_7.cpp )
 SET( SOURCES_8 ${SOURCE_DIR}/cstyle_8.cpp )
 SET( SOURCES_9 ${SOURCE_DIR}/cstyle_9.cpp )
+SET( SOURCES_10 ${SOURCE_DIR}/cstyle_10.cpp )
 ADD_EXECUTABLE( cstyle_0 ${SOURCES_0} )
 ADD_EXECUTABLE( cstyle_1 ${SOURCES_1} )
 ADD_EXECUTABLE( cstyle_2 ${SOURCES_2} )
@@ -19,4 +20,5 @@ ADD_EXECUTABLE( cstyle_6 ${SOURCES_6} )
 ADD_EXECUTABLE( cstyle_7 ${SOURCES_7} )
 ADD_EXECUTABLE( cstyle_8 ${SOURCES_8} )
 ADD_EXECUTABLE( cstyle_9 ${SOURCES_9} )
+ADD_EXECUTABLE( cstyle_10 ${SOURCES_10} )
 
